@@ -3,6 +3,6 @@
     <td><img  src="https://www.paypal.com/en_US/i/logo/PayPal_mark_180x113.gif" border="0" alt="Acceptance Mark"></td>
   </tr>
   <tr>
-    <td>Using this method, you will be directed to the Paypal website to verify your payment. Once your payment is authorized, you will be directed back to our website and your order will be complete.</td>
+    <td><?php echo lang('paypal_desc') ?></td>
   </tr>
 </table>
